--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -36,8 +36,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./techtrends
-          file: ./Dockerfile
+          context: .
+          file: ./techtrends/Dockerfile
           platforms: linux/amd64
           push: true
           tags: saketpani/techtrends:latest
