--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./techtrends
-          file: ./Dockerfile
+          file: ./techtrends/Dockerfile
           platforms: linux/amd64
           push: true
           tags: saketpani/techtrends:latest
