--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -31,7 +31,7 @@ jobs:
         uses: docker/login-action@v1 
         with:
           username: saketpani
-          password: dckr_pat_cmTjp0E8Y1fGCLOOJvm8Ti6nK1k
+          password:   # removed
       -
         name: Build and push
         uses: docker/build-push-action@v2
