--- a/helm/values-staging.yaml
+++ b/helm/values-staging.yaml
@@ -1,12 +1,14 @@
 namespace:
   name: staging
-  
+
+appname: techtrends  
+
 replicaCount: 3
 
 resources:
   requests:
-    memory: 90Mi
-    cpu: 300m
+    memory: "90Mi"
+    cpu: "300m"
   limits:
-    memory: 128Mi
-    cpu: 500m
+    memory: "128Mi"
+    cpu: "500m"
