--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: techtrends
-  name: techtrends
-  namespace: sandbox
+    app: {{.Values.appname}}
+  name: {{.Values.appname}}
+  namespace: {{.Values.namespace.name}}
 spec:
   ports:
-    - port: 4111
-      protocol: TCP
-      targetPort: 3111
+    - port: {{.Values.service.port}}
+      protocol: {{.Values.service.protocol}}
+      targetPort: {{.Values.service.targetPort}}
   selector:
-    app: techtrends
-  type: ClusterIP
+    app: {{.Values.appname}}
+  type: {{.Values.service.type}}
