--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -1,5 +1,7 @@
 namespace:
   name: prod
+
+appname: techtrends
   
 service:
   port: 7111
@@ -11,8 +13,8 @@ replicaCount: 5
 
 resources:
   requests:
-    memory: 128Mi
-    cpu: 350m
+    memory: "128Mi"
+    cpu: "350m"
   limits:
-    memory: 256Mi
-    cpu: 500m
+    memory: "256Mi"
+    cpu: "500m"
