--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,6 +1,8 @@
 namespace:
   name: sandbox
 
+appname: techtrends
+
 service:
   port: 4111
   targetPort: 3111
@@ -16,11 +18,11 @@ replicaCount: 1
 
 resources:
   requests:
-    memory: 64Mi
-    cpu: 250m
+    memory: "64Mi"
+    cpu: "250m"
   limits:
-    memory: 128Mi
-    cpu: 500m
+    memory: "128Mi"
+    cpu: "500m"
 
 containerPort: 3111
 
